# tap-circle-ci

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  tap-circle-ci.sh  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci_workflow.yml  release.yaml  update_catalog.yml
scripts/: update_catalog.py
tap_circle_ci/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_circle_ci/schemas/: __init__.py  contexts.json  jobs.json  pipelines.json  workflows.json
tap_circle_ci/tests/: __init__.py  test_core.py
tests/: test_core.py
