[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core~=1.9",
  "poetry-dynamic-versioning~=1.4",
]

[tool.poetry]
name = "meltano-tap-circle-ci"
version = "0.0.0"
description = "Singer tap for CircleCI, built with the Meltano SDK for Singer Taps."
authors = [
  "Fran Lozano <fjlozanos@gmail.com>",
]
maintainers = [
  "Meltano Team <hello@meltano.com>",
]
keywords = [
  "ELT",
  "Meltano",
  "CircleCI",
]
license = "Apache-2.0"
packages = [
  { include = "tap_circle_ci" },
]
readme = "README.md"
homepage = "https://github.com/MeltanoLabs/tap-circle-ci"
repository = "https://github.com/MeltanoLabs/tap-circle-ci"
documentation = "https://github.com/MeltanoLabs/tap-circle-ci/blob/main/README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "~=2.32.1"
singer-sdk = "~=0.41.0"
typing-extensions = { version = "~=4.12.0", python = "<3.12" }

[tool.poetry.dev-dependencies]
mypy = ">=1.7.1"
pytest = ">=8.0.0"
types-requests = "~=2.31.0.6"

[tool.poetry.scripts]
# CLI declaration
tap-circle-ci = 'tap_circle_ci.tap:TapCircleCI.cli'

[tool.poetry-dynamic-versioning]
enable = true
pattern = """
(?x)                                                           (?# ignore whitespace)
    ^v?((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)             (?# v1.2.3 or v1!2000.1.2)
    ([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?   (?# b0)
    (\\+(?P<tagged_metadata>.+))?$                             (?# +linux)
"""
style = "pep440"

[tool.ruff]
target-version = "py39"

line-length = 88
src = [
  "tap_pulumi_cloud",
  "tests",
]
format.preview = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101", # missing-type-self
  "COM812", # missing-trailing-comma
  "CPY",    # missing-copyright-notice
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenatio
]
lint.explicit-preview-rules = false
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_circle_ci",
]
lint.pydocstyle.convention = "google"
# Enable preview style formatting.
lint.preview = true

[tool.uv]
python-downloads = "manual"
