[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1,<2",
]

[project]
name = "meltano-tap-circle-ci"
description = "Singer tap for CircleCI, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "CircleCI",
  "ELT",
  "Meltano",
]
license = "Apache-2.0"
maintainers = [ { name = "Meltano Team", email = "hello@meltano.com" } ]
authors = [ { name = "Fran Lozano", email = "fjlozanos@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "requests~=2.32.1",
  "singer-sdk~=0.53.0",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]

urls.Documentation = "https://github.com/MeltanoLabs/tap-circle-ci/blob/main/README.md"
urls.Homepage = "https://github.com/MeltanoLabs/tap-circle-ci"
urls.Repository = "https://github.com/MeltanoLabs/tap-circle-ci"
scripts.tap-circle-ci = "tap_circle_ci.tap:TapCircleCI.cli"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "typing" },
]
test = [
  "pytest>=9",
]
typing = [
  "mypy>=1.7.1",
  "ty>=0.0.13",
  "types-requests~=2.32.4.20250611",
  { include-group = "test" },
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [ "tap_circle_ci" ]

[tool.hatch.build.targets.wheel]
include = [ "tap_circle_ci" ]

[tool.ruff]
line-length = 88
format.preview = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "CPY",    # missing-copyright-notice
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenatio
]
lint.explicit-preview-rules = false
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_circle_ci",
]
lint.pydocstyle.convention = "google"
# Enable preview style formatting.
lint.preview = true

[tool.pytest]
log_level = "INFO"
minversion = "9"

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
