[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1,<2",
]

[project]
name = "meltano-tap-circle-ci"
description = "Singer tap for CircleCI, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "CircleCI",
  "ELT",
  "Meltano",
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "requests~=2.34.2",
  "singer-sdk~=0.54.4",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]
[[project.authors]]
name = "Fran Lozano"
email = "fjlozanos@gmail.com"
[[project.maintainers]]
name = "Meltano Team"
email = "hello@meltano.com"
[project.scripts]
tap-circle-ci = "tap_circle_ci.tap:TapCircleCI.cli"
[project.urls]
Documentation = "https://github.com/MeltanoLabs/tap-circle-ci/blob/main/README.md"
Homepage = "https://github.com/MeltanoLabs/tap-circle-ci"
Repository = "https://github.com/MeltanoLabs/tap-circle-ci"

[dependency-groups]
dev = [
  "urllib3>=2.6.3",
  { include-group = "test" },
  { include-group = "typing" },
]
test = [
  "pytest>=9",
]
typing = [
  "mypy>=1.7.1",
  "ty>=0.0.13",
  { include-group = "test" },
]

[tool.hatch.build.targets]
wheel.include = [ "tap_circle_ci" ]
sdist.include = [ "tap_circle_ci" ]
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.ruff]
line-length = 100
[tool.ruff.format]
preview = true
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "CPY",    # missing-copyright-notice
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenatio
]
explicit-preview-rules = false
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_circle_ci",
]
pydocstyle.convention = "google"
preview = true

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true

[tool.pytest]
log_level = "INFO"
minversion = "9"
